CustomApps/lyrics-plus/style.css
/* ... */
.lyrics-lyricsContainer-UnsyncedLyricsPage:has(.lyrics-versionSelector, .lyrics-lyricsContainer-LyricsLine:nth-child(4))
	.lyrics-lyricsContainer-LyricsUnsyncedPadding {
	height: 10vh;
}

.lyrics-lyricsContainer-SyncedLyricsPage {
	display: grid;
	grid-area: 1 / 1 / -1 / -1;
	grid-template-rows: 1fr 30px;
	overflow: hidden;
	text-align: var(--lyrics-align-text);
	user-select: text;
}

.lyrics-lyricsContainer-LyricsBackground {
	background-color: var(--lyrics-color-background);
	background-image: var(--lyrics-background-noise);
	grid-area: 1 / 1 / -1 / -1;
	transition: background-color 0.25s ease-out;
}

.lyrics-lyricsContainer-Provider {
	align-self: end;
	color: var(--lyrics-color-inactive);
	grid-area: 2 / 1 / -1 / -1;
	justify-self: stretch;
	height: 25px;
	overflow: hidden;
	background: linear-gradient(0deg, var(--lyrics-color-background) 30%, transparent);
	z-index: 1;
	padding: 60px 20px 30px;
	pointer-events: none;
}

.lyrics-lyricsContainer-SyncedLyrics {
	--lyrics-line-height: calc(4px + var(--lyrics-font-size));
	grid-area: 1 / 1 / -2 / -1;
	height: 0;
}

.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine {
	transform: translateY(calc(var(--position-index) * var(--lyrics-line-height) + var(--offset)));
	transform-origin: var(--lyrics-align-text);
	transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
	transition-duration: calc(var(--animation-index) * var(--animation-tempo) + 0.1s);
	transition-property: transform, color, opacity;
}

.lyrics-lyricsContainer-LyricsContainer.blur-enabled .lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine {
	filter: blur(calc(var(--blur-index) * 1.5px));
}

.lyrics-lyricsContainer-UnsyncedLyricsPage .lyrics-lyricsContainer-LyricsLine a {
	color: var(--lyrics-color-active);
}

.lyrics-lyricsContainer-UnsyncedLyricsPage .lyrics-lyricsContainer-LyricsLine {
	color: var(--lyrics-color-inactive);
	transition: color 0.25s cubic-bezier(0, 0, 0.58, 1);
}

.lyrics-lyricsContainer-UnsyncedLyricsPage .lyrics-lyricsContainer-LyricsLine-active {
	color: var(--lyrics-color-active);
}

.lyrics-lyricsContainer-UnsyncedLyricsPage .lyrics-lyricsContainer-LyricsLine:hover {
	color: var(--lyrics-color-active);
}

.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine {
	color: var(--lyrics-color-inactive);
}

.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine:hover {
	color: var(--lyrics-color-active);
}

.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine.lyrics-lyricsContainer-LyricsLine-active {
	color: var(--lyrics-color-active);
	opacity: 1;
	transform: translateY(calc(var(--position-index) * var(--lyrics-line-height) + var(--offset))) scale(1.1);
	filter: none !important;
}

.lyrics-lyricsContainer-SyncedLyrics > .lyrics-lyricsContainer-LyricsLine-paddingLine {
	opacity: 0;
	pointer-events: none;
}

.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine.lyrics-lyricsContainer-LyricsLine-past,
.lyrics-lyricsContainer-UnsyncedLyricsPage .lyrics-lyricsContainer-LyricsLine.lyrics-lyricsContainer-LyricsLine-past {
	color: var(--lyrics-color-active);
	opacity: 1;
	filter: none !important;
}

.lyrics-lyricsContainer-LyricsLine,
.lyrics-versionSelector {
	margin-left: 100px;
	margin-right: 100px;
}

@media (min-width: 1024px) {
	.lyrics-lyricsContainer-LyricsLine,
	.lyrics-versionSelector {
		margin-left: 150px;
		margin-right: 150px;
	}
}

@media (min-width: 1280px) {
	.lyrics-lyricsContainer-LyricsLine,
	.lyrics-versionSelector {
		margin-left: 200px;
		margin-right: 200px;
	}
}

.lyrics-lyricsContainer-UnsyncedLyricsPage .lyrics-lyricsContainer-LyricsLine {
	font-size: var(--lyrics-font-size);
	font-weight: 700;
	letter-spacing: -0.04em;
	line-height: calc(12px + var(--lyrics-font-size));
}

.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine {
	font-size: var(--lyrics-font-size);
	font-weight: 700;
	letter-spacing: -0.04em;
	line-height: var(--lyrics-line-height);
}

@media (min-width: 1280px) {
	.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine {
		font-weight: 900;
	}
}

.lyrics-tabBar-headerItem {
	-webkit-app-region: no-drag;
	display: inline-block;
	pointer-events: auto;
}

.lyrics-tabBar-headerItemLink {
	margin: 0 8px 0 0;
}

.lyrics-tabBar-active {
	background-color: var(--spice-tab-active);
	border-radius: 4px;
}

.lyrics-tabBar-headerItemLink {
	border-radius: 4px;
	color: var(--spice-text);
	display: inline-block;
	margin: 0 8px;
	padding: 8px 16px;
	position: relative;
	text-decoration: none !important;
	cursor: pointer;
}

.lyrics-tabBar-headerItemLink .main-type-mestoBold {
	text-transform: capitalize;
}

.lyrics-tabBar-headerItemLink-locked::before {
	content: "• ";
}

.lyrics-tabBar-nav {
	-webkit-app-region: drag;
	pointer-events: none;
	width: 100%;
}

.lyrics-tabBar-header {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	align-items: center;
	justify-content: flex-start;
}

.lyrics-tabBar-headerItem .optionsMenu-dropBox {
	color: var(--spice-text);
	border: 0;
	max-width: 150px;
	height: 42px;
	padding: 0 30px 0 12px;
	background-color: initial;
	cursor: pointer;
	appearance: none;
}

.lyrics-tabBar-headerItem .optionsMenu-dropBox svg {
	position: absolute;
	margin-left: 8px;
}

#lyrics-plus-config-container option {
	background-color: var(--spice-button);
}

div.lyrics-tabBar-headerItemLink {
	padding: 0;
}

.lyrics-tabBar-header button.switch {
	margin-inline-end: 12px;
	margin-inline-start: 0;
}

.lyrics-lyricsContainer-Karaoke-WordActive {
	color: var(--lyrics-color-active) !important;
	background-position: top left !important;
}

.lyrics-lyricsContainer-LyricsLine:hover .lyrics-lyricsContainer-Karaoke-Word {
	background-position: top left;
}
/* ... */

